--- a/frontend/src/components/booking/ownerBookings/confirmedBookings.html
+++ b/frontend/src/components/booking/ownerBookings/confirmedBookings.html
@@ -20,6 +20,7 @@
                     <option value="started">Started</option>
                     <option value="ended">Ended</option>
                     <option value="reviewed">Reviewed</option>
+                    <option value="today">Today Bookings</option>
                 </select>
                 <span class="input-group-btn">
                     <button class="btn btn-default" ng-click="resetFilter()">Reset</button>
