--- a/frontend/src/components/booking/ownerBookings/ownerBiddings.html
+++ b/frontend/src/components/booking/ownerBookings/ownerBiddings.html
@@ -1,5 +1,5 @@
 <back-button></back-button>
-<div ng-controller="ownerBookingsCtrl" class="owner-bookings" ng-init="init()">
+<div ng-controller="ownerBiddingsCtrl" class="owner-bookings" ng-init="init()">
     <h1 class="text-center" ng-if="bookings.length > 0">Bidding Requests</h1>
 
     <div class="container-fluid text-center" style="height: 100vh; background-color: #f8f9fa; display: flex; justify-content: center; align-items: center;" ng-hide="bookings.length>0">
