--- a/frontend/src/components/sellerAnalytics/sellerAnalytics.html
+++ b/frontend/src/components/sellerAnalytics/sellerAnalytics.html
@@ -220,9 +220,17 @@
                 </div>
                 <div class="col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading">Last 7 Days Biddings</div>
+                        <div class="panel-heading">Biddings comparison</div>
                         <div class="panel-body">
                             <canvas id="myBidsVsOtherSellersAvgBids"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Earning comparison</div>
+                        <div class="panel-body">
+                            <canvas id="myEarningVsOtherSellersAvgEarnings"></canvas>
                         </div>
                     </div>
                 </div>
