--- a/frontend/src/components/home/home.html
+++ b/frontend/src/components/home/home.html
@@ -156,7 +156,7 @@
                                 <div class="col-xs-6">
                                     <p style="margin-bottom: 5px;">
                                         <span class="glyphicon glyphicon-map-marker"></span>
-                                        <strong>{{car.city}}</strong>
+                                        <strong>{{car.city}} {{ car.location==='undefined' ? '' : "(" +car.location+ ")"}}</strong>
                                     </p>
                                 </div>
                                 <div class="col-xs-6">
@@ -182,6 +182,7 @@
                                         </span>
                                     </p>
                                 </div>
+                                
                             </div>
                         </div>
 
@@ -195,7 +196,7 @@
                                     </p>
                                     <p style="margin-bottom: 5px;">
                                         <span class="glyphicon glyphicon-envelope"></span>
-                                        {{car.owner.email}}
+                                        {{car.owner.username}}
                                     </p>
                                     <p style="margin-bottom: 0;">
                                         <span class="glyphicon glyphicon-map-marker"></span>
