--- a/frontend/src/components/profile/myProfile.html
+++ b/frontend/src/components/profile/myProfile.html
@@ -105,20 +105,40 @@
       <form name="updateUserForm" novalidate>
         <div class="form-group">
           <label>First Name</label>
-          <input type="text" name="firstName" class="form-control" placeholder="Enter first name" ng-model="updatedUser.firstName" required>
+          <input type="text"
+                 name="firstName"
+                 class="form-control"
+                 placeholder="Enter first name"
+                 ng-model="updatedUser.firstName"
+                 required
+                 ng-minlength="3"
+                 ng-maxlength="50">
         </div>
+      
         <div class="form-group">
           <label>Last Name</label>
-          <input type="text" name="lastName" class="form-control" placeholder="Enter last name" ng-model="updatedUser.lastName" required>
+          <input type="text"
+                 name="lastName"
+                 class="form-control"
+                 placeholder="Enter last name"
+                 ng-model="updatedUser.lastName"
+                 required
+                 ng-minlength="3"
+                 ng-maxlength="50">
         </div>
+      
         <div class="form-group">
           <label>City</label>
-          <select class="form-control" name="city" ng-model="updatedUser.city" required>
-              <option value="" disabled>Please select your city</option>
-              <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
+          <select class="form-control"
+                  name="city"
+                  ng-model="updatedUser.city"
+                  required>
+            <option value="" disabled>Please select your city</option>
+            <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
           </select>
         </div>
       </form>
+      
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
