--- a/frontend/src/components/admin/userManagement/userManagement.html
+++ b/frontend/src/components/admin/userManagement/userManagement.html
@@ -54,20 +54,44 @@
                                 </button>
                             </td>
                         </tr>
+                        <tr ng-if="allUsers.length === 0 && !isLoading">
+                            <td colspan="5" class="text-center">No users found</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
 
+            <!-- Loading Indicator -->
+            <div class="text-center" ng-show="isLoading">
+                <i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>
+                <span class="text-primary">Loading...</span>
+            </div>
+
+            <!-- UI Bootstrap Pagination -->
+            <div class="text-center" ng-if="pagination.totalItems > 0">
+                <ul uib-pagination
+                    total-items="pagination.totalItems"
+                    ng-model="pagination.currentPage"
+                    ng-change="pageChanged()"
+                    max-size="pagination.maxSize"
+                    items-per-page="pagination.itemsPerPage"
+                    class="pagination-sm"
+                    boundary-links="true"
+                    force-ellipses="true"
+                    first-text="&laquo;"
+                    last-text="&raquo;"
+                    previous-text="&lsaquo;"
+                    next-text="&rsaquo;"
+                    rotate="true">
+                </ul>
+                <div class="text-muted">
+                    <small>
+                        Showing {{((pagination.currentPage - 1) * pagination.itemsPerPage) + 1}} 
+                        to {{Math.min(pagination.currentPage * pagination.itemsPerPage, pagination.totalItems)}} 
+                        of {{pagination.totalItems}} users
+                    </small>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--more button to load more users-->
-    <div class="text-center" ng-click="loadMore()" ng-if="hasMoreUsers && !isLoading" style="margin-bottom: 20px;">
-        <button id="load-more-btn" class="btn btn-primary mt-3">
-            Load More <span class="glyphicon glyphicon-chevron-down"></span>
-          </button>
-    </div>
-    <div class="text-center" ng-show="isLoading">
-        <i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>
-        <span class="text-primary">Loading...</span>
     </div>
 </div>
