--- a/frontend/src/components/home/home.html
+++ b/frontend/src/components/home/home.html
@@ -17,26 +17,7 @@
                 <label>Price Range:</label>
                 <select class="form-control" ng-model="priceFilter" ng-change="filterCars()">
                     <option value="">All</option>
-                    <option value="500-1000">$500 - $1000</option>
-                    <option value="1000-1500">$1000 - $1500</option>
-                    <option value="1500-2000">$1500 - $2000</option>
-                    <option value="2000-2500">$2000 - $2500</option>
-                    <option value="2500-3000">$2500 - $3000</option>
-                    <option value="3000-3500">$3000 - $3500</option>
-                    <option value="3500-4000">$3500 - $4000</option>
-                    <option value="4000-4500">$4000 - $4500</option>
-                    <option value="4500-5000">$4500 - $5000</option>
-                    <option value="5000-5500">$5000 - $5500</option>
-                    <option value="5500-6000">$5500 - $6000</option>
-                    <option value="6000-6500">$6000 - $6500</option>
-                    <option value="6500-7000">$6500 - $7000</option>
-                    <option value="7000-7500">$7000 - $7500</option>
-                    <option value="7500-8000">$7500 - $8000</option>
-                    <option value="8000-8500">$8000 - $8500</option>
-                    <option value="8500-9000">$8500 - $9000</option>
-                    <option value="9000-9500">$9000 - $9500</option>
-                    <option value="9500-10000">$9500 - $10000</option>
-                    <option value="10000">Above $10000</option>
+                    <option ng-repeat="priceRange in priceRangeArray" value="{{priceRange}}">{{priceRange}}</option>
                 </select>
             </div>
 
@@ -197,10 +178,6 @@
                                     <p style="margin-bottom: 5px;">
                                         <span class="glyphicon glyphicon-envelope"></span>
                                         {{car.owner.username}}
-                                    </p>
-                                    <p style="margin-bottom: 0;">
-                                        <span class="glyphicon glyphicon-map-marker"></span>
-                                        {{car.owner.city}}
                                     </p>
                                 </div>
                             </div>
